src/MetroCompiler.java
/* MetroCompiler.java */
/* Generated By:JavaCC: Do not edit this line. MetroCompiler.java */
package metrocompiler.parser;

import java.math.BigDecimal;
import java.util.ArrayList;
import java.util.List;
import metrocompiler.model.*;

public class MetroCompiler implements MetroCompilerConstants {
  private final List<Instruccion> instrucciones = new ArrayList<>();
  private BigDecimal ultimoVuelto = null;

  public List<Instruccion> getInstrucciones() {
    return instrucciones;
  }

  private void validarMonto(BigDecimal monto, String campo) throws ParseException {
    if (monto.compareTo(BigDecimal.ZERO) <= 0) {
      throw new ParseException("El campo '" + campo + "' debe ser mayor que 0.");
    }
  }

  private void validarCodigoTarjeta(String codigo) throws ParseException {
    if (codigo.length() > 20) {
      throw new ParseException("El codigo de tarjeta no puede superar 20 caracteres.");
    }
  }

  private BigDecimal calcularVuelto(BigDecimal pagar, BigDecimal pagado) throws ParseException {
    if (pagado.compareTo(pagar) < 0) {
      throw new ParseException("El monto pagado no puede ser menor al monto a pagar.");
    }
    return pagado.subtract(pagar);
  }

  final public void Programa() throws ParseException {
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SELECCIONAR:
      case PAGAR:
      case DEVOLVER:
      case RECARGAR:
      case DESCONTAR:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      Instruccion();
    }
    jj_consume_token(0);
}

  final public void Instruccion() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case SELECCIONAR:{
      SeleccionarViajeInstr();
      break;
      }
    case PAGAR:{
      PagarViajeInstr();
      break;
      }
    case DEVOLVER:{
      DevolverInstr();
      break;
      }
    case RECARGAR:{
      RecargarTarjetaInstr();
      break;
      }
    case DESCONTAR:{
      DescontarViajeInstr();
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  final public void SeleccionarViajeInstr() throws ParseException {Token tipo;
  String valor;
    jj_consume_token(SELECCIONAR);
    jj_consume_token(VIAJE);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case SIMPLE:{
      tipo = jj_consume_token(SIMPLE);
      break;
      }
    case DOBLE:{
      tipo = jj_consume_token(DOBLE);
      break;
      }
    case TURISTICO:{
      tipo = jj_consume_token(TURISTICO);
      break;
      }
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    jj_consume_token(PUNTO_COMA);
valor = tipo.image.toLowerCase();
    instrucciones.add(new SeleccionarViaje(valor));
}

  final public void PagarViajeInstr() throws ParseException {Token montoPagarToken;
  Token montoPagadoToken;
  BigDecimal montoPagar;
  BigDecimal montoPagado;
  BigDecimal vuelto;
    jj_consume_token(PAGAR);
    jj_consume_token(VIAJE);
    montoPagarToken = jj_consume_token(NUMERO_DECIMAL);
    jj_consume_token(COMA);
    montoPagadoToken = jj_consume_token(NUMERO_DECIMAL);
    jj_consume_token(PUNTO_COMA);
montoPagar = new BigDecimal(montoPagarToken.image);
    montoPagado = new BigDecimal(montoPagadoToken.image);
    validarMonto(montoPagar, "monto_pagar");
    validarMonto(montoPagado, "monto_pagado");
    vuelto = calcularVuelto(montoPagar, montoPagado);
    ultimoVuelto = vuelto;
    instrucciones.add(new PagarViaje(montoPagar, montoPagado));
}

  final public void DevolverInstr() throws ParseException {BigDecimal vuelto;
    jj_consume_token(DEVOLVER);
    jj_consume_token(PUNTO_COMA);
if (ultimoVuelto == null) {
      {if (true) throw new ParseException("No existe un pago previo para calcular DEVOLVER.");}
    }
    vuelto = ultimoVuelto;
    instrucciones.add(new Devolver(vuelto));
    ultimoVuelto = null;
}

  final public void RecargarTarjetaInstr() throws ParseException {Token codigoToken;
  Token montoToken;
  BigDecimal monto;
    jj_consume_token(RECARGAR);
    jj_consume_token(TARJETA);
    jj_consume_token(PREPAGO);
    codigoToken = jj_consume_token(CODIGO_TARJETA);
    jj_consume_token(COMA);
    montoToken = jj_consume_token(NUMERO_DECIMAL);
    jj_consume_token(PUNTO_COMA);
monto = new BigDecimal(montoToken.image);
    validarMonto(monto, "monto_recargar");
    validarCodigoTarjeta(codigoToken.image);
    instrucciones.add(new RecargarTarjeta(codigoToken.image, monto));
}

  final public void DescontarViajeInstr() throws ParseException {Token codigoToken;
  Token montoToken;
  BigDecimal monto;
    jj_consume_token(DESCONTAR);
    jj_consume_token(VIAJE);
    codigoToken = jj_consume_token(CODIGO_TARJETA);
    jj_consume_token(COMA);
    montoToken = jj_consume_token(NUMERO_DECIMAL);
    jj_consume_token(PUNTO_COMA);
monto = new BigDecimal(montoToken.image);
    validarMonto(monto, "monto_descontar");
    validarCodigoTarjeta(codigoToken.image);
    instrucciones.add(new DescontarViaje(codigoToken.image, monto));
}

  /** Generated Token Manager. */
  public MetroCompilerTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private int jj_gen;
  final private int[] jj_la1 = new int[3];
  static private int[] jj_la1_0;
  static {
	   jj_la1_init_0();
	}
	private static void jj_la1_init_0() {
	   jj_la1_0 = new int[] {0x9d00,0x9d00,0x70000,};
	}

  /** Constructor with InputStream. */
  public MetroCompiler(java.io.InputStream stream) {
	  this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public MetroCompiler(java.io.InputStream stream, String encoding) {
	 try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source = new MetroCompilerTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 3; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
	  ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
	 try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 3; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public MetroCompiler(java.io.Reader stream) {
	 jj_input_stream = new SimpleCharStream(stream, 1, 1);
	 token_source = new MetroCompilerTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 3; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
	if (jj_input_stream == null) {
	   jj_input_stream = new SimpleCharStream(stream, 1, 1);
	} else {
	   jj_input_stream.ReInit(stream, 1, 1);
	}
	if (token_source == null) {
 token_source = new MetroCompilerTokenManager(jj_input_stream);
	}

	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 3; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public MetroCompiler(MetroCompilerTokenManager tm) {
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 3; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(MetroCompilerTokenManager tm) {
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 3; i++) jj_la1[i] = -1;
  }

  private Token jj_consume_token(int kind) throws ParseException {
	 Token oldToken;
	 if ((oldToken = token).next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 if (token.kind == kind) {
	   jj_gen++;
	   return token;
	 }
	 token = oldToken;
	 jj_kind = kind;
	 throw generateParseException();
  }


/** Get the next Token. */
  final public Token getNextToken() {
	 if (token.next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 jj_gen++;
	 return token;
  }

/** Get the specific Token. */
  final public Token getToken(int index) {
	 Token t = token;
	 for (int i = 0; i < index; i++) {
	   if (t.next != null) t = t.next;
	   else t = t.next = token_source.getNextToken();
	 }
	 return t;
  }

  private int jj_ntk_f() {
	 if ((jj_nt=token.next) == null)
	   return (jj_ntk = (token.next=token_source.getNextToken()).kind);
	 else
	   return (jj_ntk = jj_nt.kind);
  }

  private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  private int[] jj_expentry;
  private int jj_kind = -1;

  /** Generate ParseException. */
  public ParseException generateParseException() {
	 jj_expentries.clear();
	 boolean[] la1tokens = new boolean[21];
	 if (jj_kind >= 0) {
	   la1tokens[jj_kind] = true;
	   jj_kind = -1;
	 }
	 for (int i = 0; i < 3; i++) {
	   if (jj_la1[i] == jj_gen) {
		 for (int j = 0; j < 32; j++) {
		   if ((jj_la1_0[i] & (1<<j)) != 0) {
			 la1tokens[j] = true;
		   }
		 }
	   }
	 }
	 for (int i = 0; i < 21; i++) {
	   if (la1tokens[i]) {
		 jj_expentry = new int[1];
		 jj_expentry[0] = i;
		 jj_expentries.add(jj_expentry);
	   }
	 }
	 int[][] exptokseq = new int[jj_expentries.size()][];
	 for (int i = 0; i < jj_expentries.size(); i++) {
	   exptokseq[i] = jj_expentries.get(i);
	 }
	 return new ParseException(token, exptokseq, tokenImage);
  }

  private boolean trace_enabled;

/** Trace enabled. */
  final public boolean trace_enabled() {
	 return trace_enabled;
  }

  /** Enable tracing. */
  final public void enable_tracing() {
  }

  /** Disable tracing. */
  final public void disable_tracing() {
  }

}
